--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -14,4 +17,69 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.bouncing-button {
+  @apply animate-bounce;
+  animation-play-state: running;
+}
+
+.bouncing-button:hover {
+  animation-play-state: paused;
+}
+
+.circle {
+  width: 0;
+  height: 0;
+  pointer-events: none;
+  z-index: 0;
+  transition: width 0.3s ease-in-out, height 0.3s ease-in-out, filter 0.3s ease-in-out;
+  filter: blur(0);
+}
+
+.group:hover .circle {
+  width: 300px;
+  height: 300px;
+  filter: blur(150px);
+}
+
+.hidden-animate{
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateX(5%);
+  transition: all 1.5s;
+}
+
+.show-animate{
+  opacity: 1;
+  transform: translateX(0);
+  filter: blur(0);
+}
+
+.hidden-animate-bot{
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateY(15%);
+  transition: all 5s;
+}
+
+.show-animate-bot{
+  opacity: 1;
+  transform: translateY(0);
+  filter: blur(0);
+}
+
+@keyframes animateLine {
+  0% {
+    max-height: 0;
+  }
+  100% {
+    max-height: 592px;
+  }
+}
+
+.line-animation {
+  max-height: 0;
+  overflow: hidden;
+  animation: animateLine 1s ease forwards;
 }
