--- a/src/index.css
+++ b/src/index.css
@@ -14,31 +14,27 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-/* Scrollbar Track */
 ::-webkit-scrollbar-track {
   background-color: #141414;
-  border-radius: 10px; /* Rounded corners for a padded look */
-  margin: 4px; /* This will simulate the "padding" by reducing the track size */
+  border-radius: 10px;
+  margin: 4px;
 }
 
-/* Scrollbar Thumb */
 ::-webkit-scrollbar-thumb {
-  background-color: #2a2a2a; /* Thumb color */
-  border-radius: 50px; /* Rounded thumb */
-  border: 4px solid transparent; /* Simulates padding around the thumb */
-  background-clip: padding-box; /* Ensures the thumb's background color is not affected by the border */
+  background-color: #2a2a2a;
+  border-radius: 50px;
+  border: 4px solid transparent;
+  background-clip: padding-box;
   transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
 
-/* Scrollbar Thumb on Hover */
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #1f1f1f; /* Slightly darker on hover */
-  transform: scale(1.1); /* Slight zoom effect */
+  background-color: #1f1f1f;
+  transform: scale(1.1);
 }
 
-/* Scrollbar Size */
 ::-webkit-scrollbar {
-  width: 16px; /* You can adjust this to control the size of the scrollbar */
+  width: 16px;
 }
 
 
